[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,11 +5,11 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/c.jpg" class="img-medium"/>
+            <img src="/ui/x.jpg" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am Yash.
+            Hi! I am Yash and this is my webapp.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
