This is second commit from terminal

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Yash
+            <h1>This is added from local..Tatada!!</h1>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
