--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="ui/madi.png" />
+            <img src="ui/c.jpg" />
         </div>
         <br>
         <div class="center text-big bold">
