--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -65,7 +65,7 @@
 			<div class="col-md-10" style="border-left: 2px solid white">
 				<br>
 				<a href="http://www.yashsinghblog.wordpress.com">www.yashsinghblog.wordpress.com</a><br>
-				<a href="http://www.pnwsociety.in">www.pnwsociety.in</a><br>
+				<a href="http://www.pnwsociety.in/assessment">www.pnwsociety.in/assessment</a><br>
 				<a href="#">www.bloggersyarn.in</a><br>
 
 				<br><br><br>
