--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,6 +48,7 @@
 					I am a Dreamer,Learner and an aspiring Web Designer and Developer.I love working on projects based on web Designing and Development.
 					I started learnig with basics of <b>HTML,CSS</b> continued to learn <b>Javascript</b> to add on my skills of Web 
 					designing.To add on my responsive web-designing abilities,I added <b>Bootstrap</b> to my skills.To add on to my development skills,I learned <b>PHP</b>.<br>
+					I have also worked on <b>Nodejs,Express,Socket.io,Mongodb</b> in my projects.
 					Apart from these,I have knowledge of languages like <b>C,Java,Pyhton</b>. 
 					</p>
 					<p >
@@ -64,7 +65,8 @@
 			<div class="col-md-2 " style="top: 0px;"><br><h2>Projects</h2></div>
 			<div class="col-md-10" style="border-left: 2px solid white">
 				<br>
-				<a href="http://www.yashsinghblog.wordpress.com">www.yashsinghblog.wordpress.com</a><br>
+				<a href="https://buzznow.herokuapp.com">Buzz-A Chat Application</a><br>
+				<a href="http://www.yashsinghblog.wordpress.com">Blogging website-(using wordpress)</a><br>
 				<a href="http://www.pnwsociety.in/assessment">www.pnwsociety.in/assessment</a><br>
 				<a href="#">www.bloggersyarn.in</a><br>
 
