--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -105,17 +105,16 @@
 				<h3><b><u>Skills:</u></b></h3>			
 
 				<p>
-					<b>Web Designing:</b>
+					<b>Web Designing and Development:</b>
 					<br>
 					HTML<br>
 					CSS<br>
 					BOOTSTRAP<br>
-					JAVASCRIPT<br><br>
-					<b>Web Development:</b>
-					<br>
-					
-					PHP(Beginner)<br>
-					
+					JAVASCRIPT<br>					
+					Jquery<br>
+					Nodejs<br>
+					Mongodb<br>
+					Mysql<br>					
 					<br>
 					<b>Other Programming Languages:</b>
 					<br>
