--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Personal Portfolio</title>
+	<title>Yash Singh</title>
+	<link rel="icon" href="img/proico.png" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Courgette|Diplomata|Monofett|Modak|Germania+One|Slabo+27px|Open+Sans+27px|Rammetto+One" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css ">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
