--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,7 @@
 	<div class="head-text">
 
 		<h1 style="font-family: 'Rammetto One', cursive;">Hello! I'm Yash</h1>
-
+		<div style="height: 20px;width: 20px;border-radius: 10000px;padding: 20px;float: right;border:2px solid white"></div>
 		<h1><p>A <span id="move1"></span><span class="anim">|</span></p></h1>
 	</div>
 	<a href="#about" style="color: white">
@@ -30,15 +30,20 @@
 	</button>
 	</a>
 </div>
-<div class="dots"></div>
+<div class="bullet" style="float: left;margin-top: 30%;"></div>
 <div class="row" style="background-color: #E0E0E0" >
 	<div class="col-md-1 Sidebar"></div>
 	<div class="col-md-10 content">
 		
 		<br><br>
 		<div class="card container-fluid" id="about">
-			<h2 style="font-family: 'Rammetto One', cursive;">About Me</h2><hr style="border: none;height: 2px;color:grey;background-color:grey;"></h2>
-			<br>
+			<div class="divhead">
+			<div class="bullet"></div>
+			<div style="text-align: center;">
+			<h2 style="font-family: 'Rammetto One', cursive;">About Me</h2>
+			</div>
+			</div>
+			<hr style="border: none;height: 2px;color:grey;background-color:grey;"></h2>
 			<div class="media-object">
 				<div class="media-left img-responsive" style="height: 7px;width: 7px;">
 				<img src="portfolio/yash.png" style="border-radius: 200px" />
@@ -67,7 +72,13 @@
 		</div>
 		<br><br><br>
 		<div class="card" style="background-color: #424242;color: white;text-align: justify;">
-			<div class="container " style="top: 0px;"><br><h2>Projects</h2></div>
+			<div class="divhead">
+			<div class="bullet" style="background-color: white"></div>
+			<div style="text-align: center;"><h2 style="font-family: 'Rammetto One', cursive;"> Projects</h2>
+			</div>
+			</div>
+			
+			
 			<hr>
 			<div class="container-fluid" style="color: white">
 				<br>
@@ -95,7 +106,13 @@
 		<br><br><br>
 
 		<div class="card container-fluid">
-			<h2 style="font-family: 'Rammetto One', cursive;">My Resume</h2><hr style="border: none;height: 2px;color:grey;background-color:grey;"></h2>
+		<div class="divhead">
+			<div class="bullet"></div>
+			<div style="text-align: center;"><h2 style="font-family: 'Rammetto One', cursive;"> Resume</h2>
+			</div>
+			
+		</div>
+			<hr style="border: none;height: 2px;color:grey;background-color:grey;">	
 			<br>
 			<div class="row">
 				<div class="col-md-6" style="text-align: justify;border-right: 2px solid grey">
@@ -147,9 +164,6 @@
 					Playing Musical Instruments<br>
 					Playing Cricket<br>
 					<br><br>
-
-
-
 				</div>
 			</div>
 		</div>
@@ -181,8 +195,12 @@
 	</div>
 	<br><br>
 	<div class="card row" style="background-color: #424242;color: white">
-		<h2>Personal Details</h2>
-
+		
+		<div class="divhead">
+			<div class="bullet" style="background-color: white"></div>
+			<div style="text-align: center;"><h2 style="font-family: 'Rammetto One', cursive;">Personal Details</h2>
+			</div>
+			</div>
 	<hr style="border: none;height: 2px;color:grey;background-color:white;">	
 		<div class="col-md-4 ">
 			<div class="col-md-11 card" style="box-shadow: none; background-color: #424242;">
@@ -220,7 +238,13 @@
 		<br><br><br>
 	
 	<div class="card" id="Remark">
-		<h2>Leave A Remark</h2>
+		<div class="divhead">
+			<div class="bullet"></div>
+			<div style="text-align: center;"><h2 style="font-family: 'Rammetto One', cursive;"> Leave A Remark</h2>
+			</div>
+			
+		</div>
+
 			<hr>
 			<br>
 		<form method="post" action="/" class="remarkform">
@@ -256,7 +280,17 @@
 </div>
 
 <div class="container-fluid" style="background-color: black;color: white;text-align: center;">
-<br><br>Developed by:-Yash<br><br>
+<br><br>
+
+<h4 style="font-family: 'Rammetto One', cursive;"> Developed by: Yash </h4>
+<div style="position: relative;">
+<div class="bullet" style="background-color: #E0E0E0;float: left;margin-left: 40%;top: -10px;position: absolute;"></div>
+<div style="text-align: center;border-bottom: 2px solid white;margin-left: 43%;margin-right: 43%">
+<div class="bullet" style="background-color: #E0E0E0;float: right;margin-left: 15.5%;top: -10px;position: absolute;"></div>
 </div>
+</div>
+
+<br><br>
+
 </body>
 </html>
